--- a/Apunts.tex
+++ b/Apunts.tex
@@ -197,7 +197,7 @@
 \renewcommand{\right}{\aftergroup\egroup\originalright}
 
 %\newcommand{\myref}[1]{\ref{#1}}
-\newcommand{\myref}[1]{\mynameref{#1}{\csname r@#1\endcsname}}
+\DeclareRobustCommand{\myref}[1]{\mynameref{#1}{\csname r@#1\endcsname}}
 %\newcommand{\myref}[1]{\hyperref[#1]{\nameref{#1} \eqref{#1}}}
 
 \makeatletter
