--- a/parts/FNM.tex
+++ b/parts/FNM.tex
@@ -522,9 +522,14 @@
 		\label{lema:primer element}
 		\(\mathbb{N}=\{1,S(1),S(S(1)),S(S(S(1))),\dots\}\).
 		\begin{proof}
-			Ho farem pel principi de doble inclusió. Per la definició de \myref{def:nombres naturals} tenim que si \(n\in\mathbb{N}\), aleshores \(S(n)\in\mathbb{N}\). Per tant trobem que \(\mathbb{N}\supseteq\{1,S(1),S(S(1)),S(S(S(1))),\dots\}\).
+			Ho farem pel principi de doble inclusió. Per la definició de \myref{def:nombres naturals} tenim que si \(n\in\mathbb{N}\), aleshores \(S(n)\in\mathbb{N}\). Per tant trobem que
+			\[\mathbb{N}\supseteq\{1,S(1),S(S(1)),S(S(S(1))),\dots\}.\]
 			
-			Tenim també, per la definició de \myref{def:nombres naturals}, que si \(\mathbb{M}\) és un conjunt tal que \(1\in\mathbb{M}\) i tal que \(S(m)\in\mathbb{M}\) per a tot \(m\in\mathbb{M}\), aleshores \(\mathbb{N}\subseteq\mathbb{M}\), i per tant \(\mathbb{N}\subseteq\{1,S(1),S(S(1)),S(S(S(1))),\dots\}\), i pel \myref{thm:doble inclusió} tenim que \(\mathbb{N}=\{1,S(1),S(S(1)),S(S(S(1))),\dots\}\), com volíem veure.
+			Tenim també, per la definició de \myref{def:nombres naturals}, que si \(\mathbb{M}\) és un conjunt tal que \(1\in\mathbb{M}\) i tal que \(S(m)\in\mathbb{M}\) per a tot \(m\in\mathbb{M}\), aleshores \(\mathbb{N}\subseteq\mathbb{M}\), i per tant
+			\[\mathbb{N}\subseteq\{1,S(1),S(S(1)),S(S(S(1))),\dots\},\]
+			i pel \myref{thm:doble inclusió} tenim que
+			\[\mathbb{N}=\{1,S(1),S(S(1)),S(S(S(1))),\dots\},\]
+			com volíem veure.
 		\end{proof}
 	\end{lemma}
 	\begin{notation}
